force-app/main/default/objects/Lead/fields/Lead_Quality__c.field-meta.xml
<CustomField>
    <fullName>Lead_Quality__c</fullName>
    <formula>IF(Lead_Quality_Helper__c=1, IMAGE(&quot;/img/samples/stars_100.gif&quot;,&quot;1 star&quot;),
IF(Lead_Quality_Helper__c=2, IMAGE(&quot;/img/samples/stars_200.gif&quot;,&quot;2 stars&quot;),
IF(Lead_Quality_Helper__c=3, IMAGE(&quot;/img/samples/stars_300.gif&quot;,&quot;3 stars&quot;),
IF(Lead_Quality_Helper__c=4, IMAGE(&quot;/img/samples/stars_400.gif&quot;,&quot;4 stars&quot;),
IF(Lead_Quality_Helper__c=5, IMAGE(&quot;/img/samples/stars_500.gif&quot;,&quot;5 stars&quot;), IMAGE(&quot;/img/samples/stars_000.gif&quot;,&quot;0 stars&quot;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Quality</label>
    <type>Text</type>
</CustomField>