force-app/main/default/objects/Lead/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <formula>IF(
  AnnualRevenue &gt; 1000000 &amp;&amp;
  CONTAINS(CASE(Country, &quot;United States&quot;,&quot;US&quot;,&quot;America&quot;,&quot;US&quot;,
    &quot;USA&quot;,&quot;US&quot;,&quot;US&quot;,&quot;US&quot;,&quot;NA&quot;),&quot;US&quot;),
  IF(
    ISPICKVAL(LeadSource, &quot;Partner Referral&quot;), &quot;Hot&quot;,
    IF(
      ISPICKVAL(LeadSource, &quot;Purchased List&quot;) ||
      ISPICKVAL(LeadSource, &quot;Web&quot;),
      &quot;Warm&quot;, &quot;Cold&quot;
    )
  ), &quot;Cold&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rating</label>
    <type>Text</type>
</CustomField>